--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "expo": "^32.0.6",
+    "expo-graphics": "^1.1.0",
+    "expo-three": "^3.0.0-alpha.8",
+    "react": "^16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-navigation": "^3.9.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
