--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "babel-eslint": "^10.0.1",
     "expo": "^32.0.6",
     "expo-graphics": "^1.1.0",
     "expo-three": "^3.0.0-alpha.8",
