Rename app to SiteSeeing for expo

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "SiteVisit Mobile",
+    "name": "SiteSeeing Mobile",
     "slug": "nc-project-mobile",
     "privacy": "public",
     "sdkVersion": "32.0.0",
