--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
     "react-native-scalable-image": "^0.5.1",
-    "react-navigation": "^3.9.1"
+    "react-navigation": "^3.9.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
